Set section to x11.
* debian/control: Ditto.

Change-Id: I93fefc9d4ba534abdce7b56b9ae29972cc5d4072

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: deepin-icon-theme
-Section: universe/x11
+Section: x11
 Priority: optional
 Maintainer: Zhang Cheng <zhangcheng@linuxdeepin.com>
 Standards-Version: 3.9.2
