Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/heads/*"]
+	read = group Replication
+[access "refs/tags/*"]
+	read = group Replication
