--- a/project.config
+++ b/project.config
@@ -4,4 +4,4 @@
 	read = group Replication
 [access "refs/tags/*"]
 	read = group Replication
-	push = group user/snyh (snyh)
+	push = +force group user/snyh (snyh)
