--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Zhang Cheng <zhangcheng@linuxdeepin.com>
 Standards-Version: 3.9.2
-Build-Depends: debhelper (>= 9), python, inkscape
+Build-Depends: debhelper (>= 9), python, inkscape, optipng
 
 Package: deepin-icon-theme
 Architecture: all
