--- a/project.config
+++ b/project.config
@@ -5,3 +5,6 @@
 [access "refs/tags/*"]
 	read = group Replication
 	pushTag = group user/snyh
+[access "refs/*"]
+	owner = group user/leaeasy (leaeasy)
+	owner = group user/shule1987
