--- a/project.config
+++ b/project.config
@@ -4,7 +4,7 @@
 	read = group Replication
 [access "refs/tags/*"]
 	read = group Replication
-	pushTag = group user/snyh
+	pushTag = group user/snyh (snyh)
 [access "refs/*"]
-	owner = group user/leaeasy (leaeasy)
+	owner = group user/leaeasy
 	owner = group user/shule1987
