Update group names

--- a/project.config
+++ b/project.config
@@ -6,5 +6,5 @@
 	read = group Replication
 	pushTag = group user/snyh (snyh)
 [access "refs/*"]
-	owner = group user/leaeasy
+	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
