--- a/project.config
+++ b/project.config
@@ -3,5 +3,5 @@
 [access "refs/heads/*"]
 	read = group Replication
 [access "refs/*"]
-	owner = group user/leaeasy
+	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
