Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,5 +3,6 @@
 [access "refs/heads/*"]
 	read = group Replication
 [access "refs/*"]
+	owner = group user/hualet
 	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
