--- a/project.config
+++ b/project.config
@@ -6,3 +6,5 @@
 	owner = group user/hualet
 	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
+[access "refs/tag/*"]
+	pushTag = group user/hualet
