Update group names

--- a/project.config
+++ b/project.config
@@ -4,7 +4,7 @@
 	read = group Replication
 [access "refs/*"]
 	owner = group user/hualet
-	owner = group user/leaeasy
+	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
 [access "refs/tag/*"]
 	pushTag = group user/hualet
