--- a/debian/control
+++ b/debian/control
@@ -8,5 +8,5 @@ Build-Depends: debhelper (>= 9), python, inkscape
 Package: deepin-icon-theme
 Architecture: all
 Depends: deepin-cursor-theme, flattr-icon-theme
-Description: Deepin Icons
- This package is DeepinIconTheme 
+Description: deepin icon theme
+ Icon theme for deepin os.
