Update group names

--- a/project.config
+++ b/project.config
@@ -3,8 +3,8 @@
 [access "refs/heads/*"]
 	read = group Replication
 [access "refs/*"]
-	owner = group user/hualet
+	owner = group user/Hualet Wang (hualet)
 	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
 [access "refs/tag/*"]
-	pushTag = group user/hualet
+	pushTag = group user/Hualet Wang (hualet)
