Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,7 +4,9 @@
 	read = group Replication
 [access "refs/*"]
 	owner = group user/Hualet Wang (hualet)
+	owner = group user/Island (deepinzhangshuang)
 	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
 [access "refs/tag/*"]
 	pushTag = group user/Hualet Wang (hualet)
+	pushTag = +force group user/Island (deepinzhangshuang)
