Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,6 +5,7 @@
 [access "refs/*"]
 	owner = group user/Hualet Wang (hualet)
 	owner = group user/Island (deepinzhangshuang)
+	owner = group user/gs342 (gs342)
 	owner = group user/leaeasy (leaeasy)
 	owner = group user/shule1987
 [access "refs/tag/*"]
