Modify access rules

--- a/project.config
+++ b/project.config
@@ -11,3 +11,4 @@
 [access "refs/tag/*"]
 	pushTag = group user/Hualet Wang (hualet)
 	pushTag = +force group user/Island (deepinzhangshuang)
+	pushTag = group user/gs342 (gs342)
