remove wrong firefox icons. index.theme: change inherit to Papirus theme.
Change-Id: I816a5546723967264f50af7cd6b94a1714f086d3

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9), gtk-update-icon-cache
 
 Package: deepin-icon-theme
 Architecture: all
-Depends: flattr-icon-theme
+Depends: papirus-icon-theme
 Conflicts: deepin-cursor-theme
 Description: Deepin Icons
  This package is DeepinIconTheme 
