--- a/cursors-src/loginspinner/Makefile
+++ b/cursors-src/loginspinner/Makefile
@@ -1,2 +1,3 @@
 all: 
 	xcursorgen loginspinner.conf ../../deepin/cursors/loginspinner
+	xcursorgen loginspinner@2x.conf ../../deepin/cursors/loginspinner@2x
