--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -11,24 +11,20 @@ optdepends=('gtk-engine-murrine: for gtk2 themes')
 provides=('deepin-icon-theme')
 conflicts=('deepin-icon-theme')
 groups=('deepin-git')
-source=("$pkgname-$pkgver::source.tar.gz")
+source=('source.tar.gz')
 sha512sums=('SKIP')
-pkgver() {
-    cd $pkgname-$pkgver
-    git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
 
 prepare() {
-    cd $pkgname-$pkgver
+    cd $deepin_source_name
 }
 
 build() {
-  cd $pkgname-$pkgver
+  cd $deepin_source_name
   make hicolor-links
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $deepin_source_name
   make DESTDIR="$pkgdir" install
   cp -a ./Sea ./usr/share/icons/hicolor "$pkgdir"/usr/share/icons/
 }
