fix: Modify copyright
Modify copyright

Log: Modify copyright

--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -1,4 +1,3 @@
-# Maintainer: justforlxz <justforlxz@gmail.com>
 pkgname=deepin-icon-theme-git
 pkgver=2021.11.24.r0.g572b049d
 pkgrel=1
@@ -6,7 +5,7 @@ pkgdesc="Deepin GTK Theme"
 arch=('any')
 url="https://github.com/linuxdeepin/deepin-icon-theme"
 makedepends=('git')
-license=('LGPL3')
+license=('GPL3')
 optdepends=('gtk-engine-murrine: for gtk2 themes')
 provides=('deepin-icon-theme')
 conflicts=('deepin-icon-theme')
